test/zinc_source/compile_errors/concurrency/08_close_aware_receive_arity.zn
// expected-error: close-aware receive requires exactly two bindings

fn main() {
    values = chan()
    a, b, c = <-values
}
